creusot/tests/should_fail/traits/17_impl_refinement.coma
module M_17_impl_refinement__qyi14398438181735515246__my_function [#"17_impl_refinement.rs" 14 4 14 34] (* <() as Tr> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 15 8 15 10
  let%span s17_impl_refinement1 = "17_impl_refinement.rs" 12 15 12 19
  let%span s17_impl_refinement2 = "17_impl_refinement.rs" 13 14 13 27
  
  use prelude.prelude.Int
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.Intrinsic
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.Borrow
  
  meta "compute_max_steps" 1000000
  
  let rec my_function'0 (self:()) (return'  (ret:UInt64.t))= {[@expl:my_function requires] [%#s17_impl_refinement1] true}
    (! bb0 [ bb0 = s0 [ s0 =  [ &_0 <- [%#s17_impl_refinement0] (20 : UInt64.t) ] s1 | s1 = return' {_0} ]  ] )
    [ & _0 : UInt64.t = any_l () ]
    
    [ return' (result:UInt64.t)-> {[@expl:my_function ensures] [%#s17_impl_refinement2] UInt64.t'int result >= 15}
      (! return' {result}) ]
    
end
module M_17_impl_refinement__qyi15782060473717464421__need_false [#"17_impl_refinement.rs" 29 4 29 25] (* <() as ReqFalse> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 28 15 28 23
  let%span s17_impl_refinement1 = "17_impl_refinement.rs" 27 4 27 12
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.Int
  
  use prelude.prelude.UInt64
  
  constant y  : UInt64.t
  
  function need_false'0 [#"17_impl_refinement.rs" 29 4 29 25] (y : UInt64.t) : ()
  
  goal vc_need_false'0 : true
end
module M_17_impl_refinement__qyi14398438181735515246__my_function__refines [#"17_impl_refinement.rs" 14 4 14 34] (* <() as Tr> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 14 4 14 34
  
  use prelude.prelude.Borrow
  
  predicate inv'0 (_1 : ())
  
  axiom inv_axiom'0 [@rewrite] : forall x : () [inv'0 x] . inv'0 x = true
  
  use prelude.prelude.Int
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.UInt64
  
  goal refines : [%#s17_impl_refinement0] forall self : () . inv'0 self
   -> (forall result : UInt64.t . UInt64.t'int result >= 15  -> UInt64.t'int result >= 10)
end
module M_17_impl_refinement__qyi15782060473717464421__need_false__refines [#"17_impl_refinement.rs" 29 4 29 25] (* <() as ReqFalse> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 29 4 29 25
  
  use prelude.prelude.Int
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.UInt64
  
  goal refines : [%#s17_impl_refinement0] forall x : UInt64.t . UInt64.t'int x >= 10  -> UInt64.t'int x >= 15
end
